force-app/main/default/objects/Que_AsyncRequest__c/Que_AsyncRequest__c.object-meta.xml
<CustomObject>
    <description>Stores asynchronous requests</description>
    <label>Que_AsyncRequest</label>
    <nameField>
        <displayFormat>ar-{0000}</displayFormat>
        <label>AsyncRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Que_AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>