force-app/main/default/objects/Que_AsyncRequest__c/fields/Que_Error__c.field-meta.xml
<CustomField>
    <fullName>Que_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an error occurred</description>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>