force-app/main/default/objects/Que_AsyncRequest__c/fields/Que_ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>Que_ErrorCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ErrorCount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>