force-app/main/default/objects/Que_AsyncRequest__c/fields/Que_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>Que_ErrorMessage__c</fullName>
    <description>Message when an error occurs</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>