force-app/main/default/objects/Que_AsyncRequest__c/fields/Que_ExecutionEndDate__c.field-meta.xml
<CustomField>
    <fullName>Que_ExecutionEndDate__c</fullName>
    <label>ExecutionEndDate</label>
    <type>DateTime</type>
</CustomField>