force-app/main/default/objects/Que_AsyncRequest__c/fields/Que_ExecutionStartDate__c.field-meta.xml
<CustomField>
    <fullName>Que_ExecutionStartDate__c</fullName>
    <label>ExecutionStartDate</label>
    <type>DateTime</type>
</CustomField>