force-app/main/default/objects/Que_AsyncRequest__c/fields/Que_Executor__c.field-meta.xml
<CustomField>
    <fullName>Que_Executor__c</fullName>
    <label>Que_Executor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Que_ExecutorExample</fullName>
            </value>
            <value>
                <fullName>DAR_CleanAddresseExecutor</fullName>
            </value>
            <value>
                <fullName>Que_ExampleExecutor</fullName>
                <isActive>false</isActive>
                <label>Que_ExampleExecutor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>