force-app/main/default/objects/Que_AsyncRequest__c/fields/Que_Status__c.field-meta.xml
<CustomField>
    <fullName>Que_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
                <default>true</default>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Parked</fullName>
            </value>
            <value>
                <fullName>Reconstructed</fullName>
            </value>
            <value>
                <fullName>WaitForResume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>